[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 232.0
margin_top = 108.0
margin_right = 799.0
margin_bottom = 195.0
autowrap = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 72.0
margin_top = 351.0
margin_right = 493.0
margin_bottom = 418.0
placeholder_text = "Digite um texto e pressione algum dos bot천es de enviar"

[node name="Button" type="Button" parent="."]
margin_left = 510.0
margin_top = 352.0
margin_right = 637.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 116, 36 )
text = "Bot찾o 1"

[node name="Button2" type="Button" parent="."]
margin_left = 659.0
margin_top = 350.0
margin_right = 781.0
margin_bottom = 420.0
text = "Bot찾o 2"

[node name="Button3" type="Button" parent="."]
margin_left = 808.0
margin_top = 350.0
margin_right = 921.0
margin_bottom = 419.0
text = "Bot찾o 3"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
